# codebase-to-markdown

./: .gitignore  Cargo.toml  README.md  codebase.sh
src/: main.rs  tree.rs
