[package]
name = "codebase-to-markdown"
version = "0.1.0"
edition = "2024"
authors = ["Sanjay S Kumar"]
description = "A tool to convert codebase to markdown format"
license = "MIT"
repository = "https://github.com/Quantaindew/codebase-to-markdown"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
ignore = "0.4.23"